--- a/examples/browser.test.html
+++ b/examples/browser.test.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <!-- <script type="text/javascript" src="../../dist/browser/stellar-suite.js"> -->
-  <script type="text/javascript" src="../../dist/browser/stellar-suite-dev.js">
+  <!-- <script type="text/javascript" src="../dist/browser/stellar-suite.js"> -->
+  <script type="text/javascript" src="../dist/browser/stellar-suite-dev.js">
   </script>
 </head>
 
